force-app/main/default/objects/Billing_Details__c/Billing_Details__c.object-meta.xml
<CustomObject>
    <description>Captures all billing details of a customer for a month.</description>
    <label>Billing Detail</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Billing Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>