force-app/main/default/objects/Billing_Details__c/fields/Bill_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Paid_Date__c</fullName>
    <description>Captures date when bill is actually paid.</description>
    <inlineHelpText>Captures date when bill is actually paid.</inlineHelpText>
    <label>Bill Paid Date</label>
    <type>Date</type>
</CustomField>