force-app/main/default/objects/Billing_Details__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Captures customer associated with this bill</description>
    <inlineHelpText>Captures customer associated with this bill</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Details</relationshipLabel>
    <relationshipName>Billing_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>