force-app/main/default/objects/Billing_Details__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>End_Date__c  +  14</formula>
    <inlineHelpText>Date before which bill must be paid.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>