force-app/main/default/objects/Billing_Details__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Capture bill end date.</description>
    <inlineHelpText>Capture bill end date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>