force-app/main/default/objects/Billing_Details__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Captures bill start date</description>
    <inlineHelpText>Captures bill start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>